--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "supertest": "^6.3.4"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.20.2",
     "consign": "^0.1.6",
     "express": "^4.18.2",
