--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.20.2",
     "consign": "^0.1.6",
     "express": "^4.18.2",
+    "jwt-simple": "0.5.6",
     "knex": "^3.1.0",
     "knex-logger": "^0.1.0",
     "pg": "^8.11.3"
