--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jwt-simple": "0.5.6",
     "knex": "^3.1.0",
     "knex-logger": "^0.1.0",
+    "moment": "2.22.2",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "pg": "^8.11.3"
